# qr

./: .gitignore  CMakeLists.txt  README.md  qr.vix  vix.json
examples/: CMakeLists.txt  README.md  ascii_rendering.cpp  batch_generation.cpp  batch_generator.cpp  builder_advanced.cpp  builder_api.cpp  custom_renderer.cpp  ec_levels.cpp  encoding_modes.cpp  hello_world.cpp  ppm_export.cpp  svg_embed.cpp  svg_export.cpp  svg_output.cpp
include/qr/: qr.hpp
tests/: test_basic.cpp
